Normal transform orientation ignores absolute grid snap #59083

Closed
opened 2018-12-09 20:27:52 +01:00 by Robert S · 6 comments

System Information
Operating system: Windows 10
Graphics card: 1070

Blender Version
Broken: 2.80 0fe5a78983

Short description of error

Using the move tool in edit mode on a mesh ignores the absolute grid snap option if the transform orientation is set to normal.

Exact steps for others to reproduce the error

  1. Add cube mesh
  2. Scale/move it a bit to put it between grid lines
  3. Enable absolute grid snap
  4. Enable normal transform orientation
  5. Try to snap a face to the grid using the move tool

Expected result:

The pivot should end up exactly on a grid increment.

Actual result:

The pivot ends up just as if the "absolute grid snap" option was off. Switching to a world transform orientation again respects the option.

**System Information** Operating system: Windows 10 Graphics card: 1070 **Blender Version** Broken: 2.80 0fe5a789837 **Short description of error** Using the move tool in edit mode on a mesh ignores the absolute grid snap option if the transform orientation is set to normal. **Exact steps for others to reproduce the error** 1. Add cube mesh 2. Scale/move it a bit to put it between grid lines 3. Enable absolute grid snap 4. Enable normal transform orientation 5. Try to snap a face to the grid using the move tool Expected result: The pivot should end up exactly on a grid increment. Actual result: The pivot ends up just as if the "absolute grid snap" option was off. Switching to a world transform orientation again respects the option.
Author

Added subscriber: @RobertS

Added subscriber: @RobertS

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sebastian Parborg self-assigned this 2018-12-10 17:25:02 +01:00

I can confirm that this also happens with local transform (and possibly others too).
For example:

  1. take a cube and rotate it 90 deg on the X axis.
  2. Enter edit mode and select a face on the global Y axis.
  3. Press G and then Z two times to transform along the local Z axis
  4. The same problem occurs as above.
I can confirm that this also happens with local transform (and possibly others too). For example: 1. take a cube and rotate it 90 deg on the X axis. 2. Enter edit mode and select a face on the global Y axis. 3. Press G and then Z two times to transform along the local Z axis 4. The same problem occurs as above.

I've posted my initial fix for this problem here: D4069

I've posted my initial fix for this problem here: [D4069](https://archive.blender.org/developer/D4069)

This issue was referenced by a8103a0256

This issue was referenced by a8103a0256a1c7408f8ed62ac9756c886e278bb5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59083
No description provided.