Fix T59083: normal transform orientation ignores absolute grid snap.

Absolute grid snap now takes into account the transform local axis.

Differential Revision: https://developer.blender.org/D4069